# franz-lern

./: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements-audio.txt  requirements.txt
.streamlit/: config.toml
docs/: PLAN.md
docs/assets/: ARCHITECTURE.md
docs/tickets/: 2026-04-21-ux-polish-reading-task.md
experiments/radio-task-archived/: DISCLAIMER.md  radio.py
experiments/verben_categorizer/: DISCLAIMER.md
experiments/webapp-fastapi-abandoned/: DISCLAIMER.md
research/: 2026-04-20-model-provider-analysis.md
src/: app.py  cli.py  config.py  correction.py  i18n.py  prompts.py  vocab.py
src/pages/: 1_ℹ️_About.py
src/tasks/: base.py  cloze.py  conjugation.py  error_detection.py  quiz.py  sentence_building.py  synonym_antonym.py  translation.py  writing.py
tests/: fake_openai.py  test_config.py  test_i18n.py  test_prompts.py  test_vocab.py
tests/test_tasks/: test_conjugation.py  test_error_detection.py  test_quiz.py  test_radio.py  test_sentence_building.py  test_synonym_antonym.py  test_translation.py  test_writing.py
